force-app/main/default/objects/vlocity_ins__ServicePoint__c/fields/vlocity_ins__ActivationDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ActivationDate__c</fullName>
    <label>Activation Date</label>
    <type>Date</type>
</CustomField>