force-app/main/default/objects/vlocity_ins__ServicePoint__c/fields/vlocity_ins__PremisesId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__PremisesId__c</fullName>
    <label>Premises</label>
    <referenceTo>vlocity_ins__Premises__c</referenceTo>
    <relationshipLabel>Service Points</relationshipLabel>
    <relationshipName>ServicePoints</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>