force-app/main/default/objects/vlocity_ins__ServicePoint__c/fields/vlocity_ins__ServiceType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ServiceType__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Electricity</fullName>
            </value>
            <value>
                <fullName>Gas</fullName>
            </value>
            <value>
                <fullName>Water</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>